// ===============================================
// VINIHOTEL - Database Diagram (dbdiagram.io NORMALIZED 3FN)
// Copia y pega este código en https://dbdiagram.io/d
// ===============================================

// ===============================================
// ENUMERATIONS / CONFIGURATION TABLES
// ===============================================

Table room_types {
  id String [primary key]
  name String [unique, not null]
  description String
}

Table staff_positions {
  id String [primary key]
  name String [unique, not null]
  description String
  requiresAuth Integer [default: 1]
}

Table payment_methods {
  id String [primary key]
  name String [unique, not null]
  enabled Integer [default: 1]
}

// ===============================================
// CORE USERS TABLE (No redundancy)
// ===============================================

Table usuarios {
  idUsuario String [primary key]
  nombre String [not null]
  apellido String [not null]
  email String [unique, not null]
  passwordHash String [not null]
  rol String [not null, default: 'client', note: 'client, staff, admin']
  phone String
  documentId String [unique]
  dateOfBirth Date
  nationality String
  address String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

// ===============================================
// USER EXTENSIONS (No field duplication)
// ===============================================

Table clientes {
  idCliente String [primary key]
  idUsuario String [not null, unique, ref: > usuarios.idUsuario]
  preferredLanguage String [default: 'es']
  loyaltyPoints Integer [default: 0]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table staff {
  idStaff String [primary key]
  idUsuario String [not null, unique, ref: > usuarios.idUsuario]
  hotelId String [not null, ref: > hoteles.idHotel]
  positionId String [not null, ref: > staff_positions.id]
  hireDate Date [not null]
  salary Real
  status String [default: 'active', note: 'active, inactive, on_leave']
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

// ===============================================
// HOTELS & ROOMS (Normalized amenities)
// ===============================================

Table hoteles {
  idHotel String [primary key]
  nombre String [not null]
  description String
  location String [not null]
  image String
  rating Real [note: '0-5']
  checkInTime String [default: '15:00']
  checkOutTime String [default: '11:00']
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table hotel_amenities {
  id String [primary key]
  hotelId String [not null, ref: > hoteles.idHotel]
  amenity String [not null]
  createdAt DateTime [not null]
}

Table rooms {
  id String [primary key]
  hotelId String [not null, ref: > hoteles.idHotel]
  name String [not null]
  roomTypeId String [not null, ref: > room_types.id]
  capacity Integer [not null]
  price Real [not null]
  available Integer [not null]
  image String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table room_amenities {
  id String [primary key]
  roomId String [not null, ref: > rooms.id]
  amenity String [not null]
  createdAt DateTime [not null]
}

// ===============================================
// BOOKINGS & INVOICES (Normalized separations)
// ===============================================

Table bookings {
  id String [primary key]
  idCliente String [not null, ref: > clientes.idCliente]
  roomId String [not null, ref: > rooms.id]
  checkIn Date [not null]
  checkOut Date [not null]
  numberOfGuests Integer [not null]
  totalPrice Real [not null]
  status String [default: 'confirmed', note: 'pending, confirmed, checked-in, checked-out, cancelled']
  specialRequests String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table invoices {
  id String [primary key]
  bookingId String [not null, unique, ref: > bookings.id]
  idUsuario String [not null, ref: > usuarios.idUsuario]
  subtotal Real [not null]
  taxes Real [default: 0]
  discount Real [default: 0]
  total Real [not null]
  paymentMethod String [not null, ref: > payment_methods.id]
  paymentStatus String [default: 'pending', note: 'pending, paid, refunded, cancelled']
  issuedDate DateTime [not null]
  dueDate Date
  notes String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table invoice_items {
  id String [primary key]
  invoiceId String [not null, ref: > invoices.id]
  description String [not null]
  amount Real [not null]
  itemType String [note: 'accommodation, additional_charge, discount, tax']
  createdAt DateTime [not null]
}

// ===============================================
// RELATIONSHIPS & CONSTRAINTS SUMMARY
// ===============================================

// Ref: usuarios.idUsuario < clientes.idCliente
// Ref: usuarios.idUsuario < staff.idStaff
// Ref: hoteles.idHotel < rooms.hotelId
// Ref: hoteles.idHotel < hotel_amenities.hotelId
// Ref: hoteles.idHotel < staff.hotelId
// Ref: rooms.id < room_amenities.roomId
// Ref: rooms.id < bookings.roomId
// Ref: clientes.idCliente < bookings.idCliente
// Ref: bookings.id < invoices.bookingId
// Ref: usuarios.idUsuario < invoices.idUsuario
// Ref: invoices.id < invoice_items.invoiceId

// ===============================================
// RELACIONES PRINCIPALES
// ===============================================

// Ref: usuarios.idUsuario < clientes.idUsuario
// Ref: hoteles.idHotel < rooms.hotelId
// Ref: clientes.idCliente < bookings.idCliente
// Ref: rooms.id < bookings.roomId
// Ref: usuarios.idUsuario < invoices.userId
// Ref: bookings.id < invoices.bookingId
// Ref: hoteles.idHotel < staff.hotelId
// Ref: usuarios.idUsuario < staff.idUsuario

// ===============================================
// NOTAS
// ===============================================
// 1. Los ID son String (UUID) para mejor escalabilidad
// 2. Los timestamps se gestionan automáticamente
// 3. Algunos campos permiten NULL para flexibilidad
// 4. JSON fields (amenities, images) se almacenan como strings JSON
// 5. Las relaciones están diseñadas con integridad referencial
// 6. El status de bookings controla el flujo principal
// 7. El paymentStatus sincroniza bookings e invoices
